control-plane/envoy.yaml
node:
  id: async-service-supervisor-envoy-control-plane
  cluster: async-service-supervisor-envoy-control-plane

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19000

static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: app-http1
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    # The cluster is static. Only its endpoints are discovered, from the
    # supervisor's endpoint discovery service.
    - name: app-http1
      connect_timeout: 1s
      type: EDS
      lb_policy: ROUND_ROBIN
      eds_cluster_config:
        service_name: app-http1
        eds_config:
          resource_api_version: V3
          api_config_source:
            api_type: GRPC
            transport_api_version: V3
            grpc_services:
              - envoy_grpc:
                  cluster_name: supervisor_eds

    - name: supervisor_eds
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: supervisor_eds
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: supervisor
                      port_value: 18000
      http2_protocol_options: {}
